Adding storecopy to micro benchmarks
There are two separate benchmarks:
- Using the existing machinery around the catchup protocol. This uses CatchupClientFactory and CatchupServerBuilder and also StoreCopyClient. It is parameterized how much the database is filled before (64MB, 256MB, 1GB of transactions). After prefill, a full store copy is done without pulling transactions.
- Only the most essential network parts. This uses only the CatchupProtocol*Installers. Here also a full store copy is done, although the files behind are not real, just some prepared files in memory. It is parameterized with the total size of the files (64MB, 256MB, 1GB)