@@ -14,6 +14,7 @@ import com.neo4j.bench.micro.benchmarks.BaseRegularBenchmark;
 import com.neo4j.causalclustering.core.state.machines.tx.ReplicatedTransaction;
 import com.neo4j.causalclustering.core.state.machines.tx.ReplicatedTransactionMarshalV2;
 import com.neo4j.causalclustering.core.state.machines.tx.TransactionRepresentationReplicatedTransaction;
+import org.apache.commons.io.FileUtils;
 
 import java.io.IOException;
 import java.nio.file.Path;
@@ -23,10 +24,10 @@ import java.util.Stack;
 import org.neo4j.configuration.Config;
 import org.neo4j.configuration.GraphDatabaseSettings;
 import org.neo4j.dbms.api.DatabaseManagementService;
-import org.neo4j.graphdb.GraphDatabaseService;
 import org.neo4j.graphdb.facade.DatabaseManagementServiceFactory;
 import org.neo4j.graphdb.facade.GraphDatabaseDependencies;
 import org.neo4j.graphdb.factory.module.GlobalModule;
+import org.neo4j.graphdb.factory.module.edition.AbstractEditionModule;
 import org.neo4j.graphdb.factory.module.edition.CommunityEditionModule;
 import org.neo4j.kernel.api.security.provider.NoAuthSecurityProvider;
 import org.neo4j.kernel.database.DatabaseId;
@@ -42,19 +43,35 @@ public abstract class EditionModuleBackedAbstractBenchmark extends BaseRegularBe
 {
     private final Stack<ClusterTx> clusterTxStack = new Stack<>();
     private GraphDatabaseFacade graphDatabaseFacade;
-    private Path tempDirectory;
     private DatabaseManagementService managementService;
+    private GlobalModule globalModule;
+    private Config config;
     protected static final NamedDatabaseId NAMED_DATABASE_ID = TestDatabaseIdRepository.randomNamedDatabaseId();
     protected static final DatabaseId DATABASE_ID = NAMED_DATABASE_ID.databaseId();
 
-    protected GraphDatabaseService db()
+    protected GraphDatabaseFacade db()
     {
         return graphDatabaseFacade;
+    }
+
+    protected GlobalModule module()
+    {
+        return globalModule;
+    }
+
+    public Config config()
+    {
+        return config;
     }
 
     protected abstract void setUp() throws Throwable;
 
     protected abstract void shutdown();
+
+    protected AbstractEditionModule createModule( GlobalModule globalModule )
+    {
+        return new TxProbingEditionModule( globalModule );
+    }
 
     @Override
     protected void benchmarkSetup( BenchmarkGroup group,
@@ -62,24 +79,33 @@ public abstract class EditionModuleBackedAbstractBenchmark extends BaseRegularBe
                                    Neo4jConfig neo4jConfig,
                                    ForkDirectory forkDirectory ) throws Throwable
     {
-        Path tempDirectory = Paths.get( forkDirectory.toAbsolutePath() ).resolve( "temp-db" );
-        BenchmarkUtil.assertDoesNotExist( tempDirectory );
-        managementService = new DatabaseManagementServiceFactory( DatabaseInfo.COMMUNITY, TxProbingEditionModule::new )
-                .build( Config.defaults(), GraphDatabaseDependencies.newDependencies().dependencies( noOpSystemGraphInitializer() ) );
+        var tempDirectory = forkDirectory == null ? Path.of( "." ) : Paths.get( forkDirectory.toAbsolutePath() );
+        tempDirectory = tempDirectory.resolve( "temp-db" ).toAbsolutePath().normalize();
+        FileUtils.deleteDirectory( tempDirectory.toFile() );
+        config = Config.newBuilder().set( GraphDatabaseSettings.neo4j_home, tempDirectory ).build();
+        managementService = new DatabaseManagementServiceFactory( DatabaseInfo.COMMUNITY, this::saveModule )
+                .build( config, GraphDatabaseDependencies.newDependencies().dependencies( noOpSystemGraphInitializer() ) );
         graphDatabaseFacade = (GraphDatabaseFacade) managementService.database( Config.defaults().get( GraphDatabaseSettings.default_database ) );
         setUp();
     }
 
     @Override
-    protected void benchmarkTearDown()
+    protected void benchmarkTearDown() throws Throwable
     {
         shutdown();
         managementService.shutdown();
+        FileUtils.deleteDirectory( config.get( GraphDatabaseSettings.neo4j_home ).toFile() );
     }
 
     protected ClusterTx popLatest()
     {
         return clusterTxStack.pop();
+    }
+
+    private AbstractEditionModule saveModule( GlobalModule  globalModule )
+    {
+        this.globalModule = globalModule;
+        return createModule( globalModule );
     }
 
     class TxProbingEditionModule extends CommunityEditionModule
